// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prop desc-text-align left 1`] = `
"<view class=\\"vin-cell\\" style=\\"border-radius: px;\\">
  <!--v-if-->
  <!--v-if-->
  <view class=\\"vin-cell__value\\" style=\\"text-align: left;\\">张三</view>
  <!--v-if-->
</view>"
`;

exports[`prop isLink  1`] = `
"<view class=\\"vin-cell vin-cell--clickable\\" style=\\"border-radius: px;\\">
  <!--v-if-->
  <!--v-if-->
  <!--v-if--><text class=\\"vin-iconfont vin-icon vin-icon-right vin-cell__link\\"></text>
</view>"
`;

exports[`prop title desc subtitle 1`] = `
"<view class=\\"vin-cell\\" style=\\"border-radius: px;\\">
  <!--v-if-->
  <view class=\\"vin-cell__title\\">
    <view class=\\"title\\">标题1</view>
    <view class=\\"vin-cell__title-desc\\">副标题1</view>
  </view>
  <view class=\\"vin-cell__value\\" style=\\"text-align: right;\\">描述1</view>
  <!--v-if-->
</view>"
`;

exports[`slot default test 1`] = `"<view class=\\"vin-cell\\" style=\\"border-radius: px;\\">Custom Content</view>"`;

exports[`slot link、icon test 1`] = `
"<view class=\\"vin-cell\\" style=\\"border-radius: px;\\">
  <view class=\\"vin-cell__icon\\">Custom Icon</view>
  <view class=\\"vin-cell__title\\">
    <view class=\\"title\\">标题1</view>
    <view class=\\"vin-cell__title-desc\\">副标题1</view>
  </view>
  <view class=\\"vin-cell__value\\" style=\\"text-align: right;\\">描述1</view>Custom Link
</view>"
`;
